Prevent tier badges wrapping on very small screens

--- a/client/components/theme-tier/theme-tier-badge/style.scss
+++ b/client/components/theme-tier/theme-tier-badge/style.scss
@@ -4,11 +4,13 @@
 	color: var(--color-neutral-60);
 	display: flex;
 	flex-basis: 100%;
+	flex-wrap: wrap;
 	font-size: $font-body-small;
 	line-height: 20px;
+	white-space: nowrap;
 
 	.theme-tier-badge__content {
-		margin: 0 8px 0 0;
+		margin: 0 8px 4px 0;
 		vertical-align: middle;
 
 		&.is-third-party {
